mon projet planning course design

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div class="rightContent">
                 <div class="title">
                     <p>planning ODC courses</p>
-                    <div class="dark">
-                        <div></div>
+                    <div class="darkParent">
+                        <div class="dark"></div>
                     </div>
                     <span> 4 courses </span>
                 </div>
