mon projet planning course design

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>planning</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/brands.min.css" integrity="sha512-L+sMmtHht2t5phORf0xXFdTC0rSlML1XcraLTrABli/0MMMylsJi3XA23ReVQkZ7jLkOEIMicWGItyK4CAt2Xw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
@@ -13,23 +14,44 @@
             <div class="leftContent">
                 <input type="text" id="search" placeholder="search">
                 <div class="descriptions">
-                    <div class="description"></div>
-                    <div class="description"></div>
-                    <div class="description"></div>
-                    <div class="description"></div>
+                    <div class="description" id="teacher">
+                        <span>logo</span>
+                        <span>6</span>
+                        <span>enseign.</span>
+                        <span>+</span>
+                    </div>
+                    <div class="description" id="salle">
+                        <span>logo</span>
+                        <span>6</span>
+                        <span>salles</span>
+                        <span>+</span>
+                    </div>
+                    <div class="description" id="classroom">
+                        <span>logo</span>
+                        <span>6</span>
+                        <span>classes</span>
+                        <span>+</span>
+                    </div>
+                    <div class="description" id="module">
+                        <span>logo</span>
+                        <span>6</span>
+                        <span>modules</span>
+                        <span>+</span>
+                    </div>
                 </div>
-               <div class="selected">
+               <div class="selected" id="selected">
                 <select name="" id="">
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
-                    <option value=""></option>
+                    <option value="1"></option>
+                    <option value="2"></option>
+                    <option value="3"></option>
+                    <option value="4"></option>
+                    <option value="5"></option>
                 </select>
                </div>
             </div>
             <div class="rightContent">
                 <div class="title">
-                    <p>planning ODC courses</p>
+                    <p>planning: ODC courses</p>
                     <div class="darkParent">
                         <div class="dark"></div>
                     </div>
