mon projet planning course design js fait

--- a/index.html
+++ b/index.html
@@ -74,27 +74,32 @@
                 </div>
                 <div class="shedelulle">
                     <div class="child">
-                        <div>lundi</div>
+                        <div>lundi  <span style="color: green;margin-left: 12px;font-size: 1.8em;">+</span></div>
+                        <div>
+                            <div></div>
+                            <div class="c1">
+                            </div>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="child">
+                        <div>mardi  <span style="color: green;margin-left: 12px;font-size: 1.8em;">+</span></div>
                         <div></div>
                     </div>
                     <div class="child">
-                        <div>mardi</div>
+                        <div>mercredi  <span style="color: green;margin-left: 12px;font-size: 1.8em;">+</span></div>
                         <div></div>
                     </div>
                     <div class="child">
-                        <div>mercredi</div>
+                        <div>jeudi  <span style="color: green;margin-left: 12px;font-size: 1.8em;">+</span></div>
                         <div></div>
                     </div>
                     <div class="child">
-                        <div>jeudi</div>
+                        <div>vendredi  <span style="color: green;margin-left: 12px;font-size: 1.8em;">+</span></div>
                         <div></div>
                     </div>
                     <div class="child">
-                        <div>vendredi</div>
-                        <div></div>
-                    </div>
-                    <div class="child">
-                        <div>samedi</div>
+                        <div>samedi  <span style="color: green;margin-left: 12px;font-size: 1.8em;">+</span></div>
                         <div></div>
                     </div>
                 </div>
